--- a/index.html
+++ b/index.html
@@ -21,5 +21,61 @@
                 </ul>
             </nav>
         </header>
+        <main class="profile">
+            <div class="profile__wrapper">
+                <div class="profile__img-container">
+                    <img src="/multimedia/imagen.jpg" alt="Pandi Chill" class="profile__img">
+                </div>
+                <div class="profile__data-container">
+                    <div class="profile__data">
+                        <div class="profile__description">
+                            <h1>¿Quien es Pandi?</h1>
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut amet, asperiores incidunt maxime quae laudantium ipsum repellat animi ducimus quas praesentium harum eveniet, expedita unde ipsa ea inventore, error nulla.
+                            </p>
+                        </div>
+                        <div class="profile__skills-container">
+                            <h2>SKILLS</h2>
+                            <ul>
+                                <li class="profile__skill">
+                                    <div class="load-bar">
+                                        <div class="load-bar__bar bar--80">80%</div>
+                                    </div>
+                                    <span class="profile__skill-name">HTML</span>
+                                </li>
+
+                                <li class="profile__skill">
+                                    <div class="load-bar">
+                                        <div class="load-bar__bar bar--60">60%</div>
+                                    </div>
+                                    <span class="profile__skill-name">CSS</span>
+                                </li>
+
+                                <li class="profile__skill">
+                                    <div class="load-bar">
+                                        <div class="load-bar__bar bar--70">70%</div>
+                                    </div>
+                                    <span class="profile__skill-name">JS</span>
+                                </li>
+
+                                <li class="profile__skill">
+                                    <div class="load-bar">
+                                        <div class="load-bar__bar bar--90">90%</div>
+                                    </div>
+                                    <span class="profile__skill-name">Python</span>
+                                </li>
+
+                                <li class="profile__skill">
+                                    <div class="load-bar">
+                                        <div class="load-bar__bar bar--60">60%</div>
+                                    </div>
+                                    <span class="profile__skill-name">SQL</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
